--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Andika&family=Righteous&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 * {
     margin: 0;
@@ -50,6 +51,7 @@
 }
 
 .Box {
+    background-color: #050505;
     padding: 20px;
     display: flex;
 }
@@ -57,22 +59,27 @@
 .Box .image {
     background-color: #050505;
     padding: 10px;
+    width: 100%;
 }
 
 .info {
     background-color: #050505;
     color: white;
-    border-radius: 15px;
     padding: 20px;
+    width: 100%;
 }
 
 .info h4 {
-    font-size: 30px;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px 0;
 }
 
 .info p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    width: 90%;
+    padding: 10px 0;
 }
 
 .InfoBox {
