--- a/style/main.css
+++ b/style/main.css
@@ -92,6 +92,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 .InfoBox h2 {
@@ -132,6 +133,10 @@
     font-size: 30px;
 }
 
+.GitHubBox p {
+    padding: 20px 0;
+}
+
 .image {
     margin: 40px 0;
     padding: 40px;
@@ -155,7 +160,10 @@
 }
 
 .Requirements .RequirementBox {
-    padding: 20px;
+    padding: 30px 40px;
+    margin: 20px;
+    background-color: #f5f1f1;
+    border-radius: 20px;
 }
 
 .Requirements .RequirementBox h3 {
