--- a/style/main.css
+++ b/style/main.css
@@ -192,6 +192,10 @@ footer {
     font-size: 20px;
 }
 
+footer p {
+    padding: 0 0 30px 0;
+}
+
 .PrivacyPolicyHeader {
     padding: 120px 20px;
     color: #070336;
